--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
             "php artisan optimize"
         ],
         "post-update-cmd": [
+            "composer update",
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
