--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,12 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
+            "php artisan clear-compiled",
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
         "post-update-cmd": [
-            "composer update",
+            "php artisan clear-compiled",
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ]
